Link ACTS Components.

--- a/Reconstruction/RecTracker/CMakeLists.txt
+++ b/Reconstruction/RecTracker/CMakeLists.txt
@@ -11,11 +11,14 @@ find_package(PODIO)
 find_package(HepMC)
 find_package(DD4hep)
 find_package(ROOT)
+find_package(ACTS COMPONENTS Core Examples TGeoPlugin DD4hepPlugin)
+#workaround for the lone -lGeom flag exported by ACTS
+link_directories(${ROOT_INCLUDE_DIR}/../lib)
 
 gaudi_add_module(RecTracker
                  src/components/*.cpp
-                 INCLUDE_DIRS ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface RecInterface
-                 LINK_LIBRARIES ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep ${DD4hep_COMPONENT_LIBRARIES})
+                 INCLUDE_DIRS ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface RecInterface ACTS
+                 LINK_LIBRARIES ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep ${DD4hep_COMPONENT_LIBRARIES} ACTS::ACTSCore ACTS::ACTSDD4hepPlugin ACTS::ACTSExamples) 
 
 include(CTest)
 #gaudi_add_test(genJetClustering
