--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ if (SAS)
         )
 endif(SAS)
 
+set(LCG_SYSTEM "x86_64-slc6-gcc49")
+set(LCG_releases_base "$ENV{LCGPREFIX}/releases")
+
 #---------------------------------------------------------------
 # Load macros and functions for Gaudi-based projects
 find_package(GaudiProject)
