--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,8 @@ if (SAS)
         )
 endif(SAS)
 
-set(LCG_SYSTEM "x86_64-slc6-gcc49")
+set(LCG_SYSTEM "$ENV{PLATFORM}")
 set(LCG_releases_base "$ENV{LCGPREFIX}/releases")
-
 #---------------------------------------------------------------
 # Load macros and functions for Gaudi-based projects
 find_package(GaudiProject)
