--- a/Reconstruction/RecCalorimeter/CMakeLists.txt
+++ b/Reconstruction/RecCalorimeter/CMakeLists.txt
@@ -52,3 +52,17 @@ gaudi_add_test(EcalReconstructionNoiseFromFile
                ENVIRONMENT LD_PRELOAD+=build.$BINARY_TAG/lib/libDetSegmentation.so
                DEPENDS simulateECalForReconstruction
                FRAMEWORK tests/options/runEcalReconstruction.py)
+
+gaudi_add_test(simulateHCal
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               FRAMEWORK tests/options/geant_fullsim_hcal_singleparticles.py)
+
+gaudi_add_test(HcalDigitisationWithoutNoise
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               DEPENDS simulateHCal
+               FRAMEWORK tests/options/runHcalDigitisationWithoutNoise.py)
+
+gaudi_add_test(HcalDigitisationFlatNoise
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               DEPENDS simulateHCal
+               FRAMEWORK tests/options/runHcalDigitisationFlatNoise.py)
