--- a/Detector/DetCommon/CMakeLists.txt
+++ b/Detector/DetCommon/CMakeLists.txt
@@ -5,14 +5,14 @@ gaudi_subdir(DetCommon v1r0)
 
 gaudi_depends_on_subdirs(GaudiKernel Detector/DetSegmentation)
 
-find_package(DD4hep COMPONENTS DDG4 DDSegmentation REQUIRED)
-find_package(Geant4)
+find_package(DD4hep COMPONENTS DDG4 DDSegmentation REQUIRED NO_CMAKE_SYSTEM_PATH)
+find_package(Geant4 NO_CMAKE_SYSTEM_PATH)
 include(${Geant4_USE_FILE})
 
 set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
 include( DD4hep )
 
-find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
+find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED NO_CMAKE_SYSTEM_PATH)
 
 gaudi_install_headers(DetCommon)
 gaudi_add_library(DetCommon
