Fix ctest typos

--- a/Test/TestGeometry/CMakeLists.txt
+++ b/Test/TestGeometry/CMakeLists.txt
@@ -28,8 +28,8 @@ dd4hep_generate_rootmap(TestGeometry)
 
 include(CTest)
 gaudi_add_test(GeantOverlapTestFCChhMaster
-               WORING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               FRAMEWORK Test/TestGeometry/tests/options/geant_overlap_test_fcchh.py
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               FRAMEWORK tests/options/geant_overlap_test_fcchh.py
                FAILREGEX "Overlap is detected")
 gaudi_add_test(TestBorderCellIDFromGdml
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/Test/TestGeometry/tests/
