--- a/Detector/DetComponents/CMakeLists.txt
+++ b/Detector/DetComponents/CMakeLists.txt
@@ -34,3 +34,13 @@ gaudi_add_test(MergeCells
 gaudi_add_test(MergeLayers
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK tests/options/mergeLayers.py)
+gaudi_add_test(positionsInclinedEcal
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               ENVIRONMENT LD_PRELOAD+=build.$BINARY_TAG/lib/libDetSegmentation.so
+               DEPENDS simulateInclinedEcal
+               FRAMEWORK tests/options/positions_inclinedEcal.py)
+gaudi_add_test(positionsInclinedEcalCheckNonZero
+               ENVIRONMENT PYTHONPATH+=$ENV{PODIO}/python
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               COMMAND python Detector/DetStudies/tests/scripts/check_nonzero_inclinedEcal_positions.py
+               DEPENDS simulateInclinedEcal positionsInclinedEcal)
