--- a/Reconstruction/RecCalorimeter/CMakeLists.txt
+++ b/Reconstruction/RecCalorimeter/CMakeLists.txt
@@ -49,6 +49,10 @@ gaudi_add_test(EcalReconstructionNoiseFromFile
                DEPENDS simulateECalForReconstruction
                FRAMEWORK tests/options/runEcalReconstruction.py)
 
+gaudi_add_test(EcalInclinedDigitisation
+               WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+               FRAMEWORK tests/options/runEcalInclinedDigitisation.py)
+
 gaudi_add_test(simulateHCal
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                FRAMEWORK tests/options/geant_fullsim_hcal_singleparticles.py)
