--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,5 +15,11 @@ endif(SAS)
 find_package(GaudiProject)
 #---------------------------------------------------------------
 
+configure_file(cmake/fccrun.in ${CMAKE_BINARY_DIR}/fccrun)
+install(FILES ${CMAKE_BINARY_DIR}/fccrun
+        DESTINATION .
+        PERMISSIONS WORLD_EXECUTE WORLD_READ
+        RENAME run)
+
 gaudi_project(FCCSW HEAD
               USE Gaudi v28r2 )
