--- a/Detector/DetFCChhECalInclined/CMakeLists.txt
+++ b/Detector/DetFCChhECalInclined/CMakeLists.txt
@@ -15,6 +15,10 @@ include( DD4hep )
 
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
+include_directories(SYSTEM ${DD4hep_INCLUDE_DIRS} ${ROOT_INCLUDE_DIRS})
+
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION Detector/DetFCChhECalInclined)
+
 gaudi_add_module(DetFCChhECalInclined
                  src/*.cpp
                  INCLUDE_DIRS DD4hep ROOT DetExtensions Geant4
