--- a/Detector/DetExtensions/CMakeLists.txt
+++ b/Detector/DetExtensions/CMakeLists.txt
@@ -1,8 +1,8 @@
 ################################################################################
 # Package: DetExtensions
 ################################################################################
-gaudi_subdir(DetExtensions v1r0)
+#gaudi_subdir(DetExtensions v1r0)
 
-gaudi_install_headers(DetExtensions)
+#gaudi_install_headers(DetExtensions)
 
 
