Finish update to DD4hep v01-02

--- a/Reconstruction/RecTracker/CMakeLists.txt
+++ b/Reconstruction/RecTracker/CMakeLists.txt
@@ -6,26 +6,28 @@ gaudi_subdir(RecTracker v1r0)
 # this declaration will not be needed in the future
 gaudi_depends_on_subdirs(GaudiAlg FWCore Sim/SimG4Common Sim/SimG4Interface Detector/DetInterface Reconstruction/RecInterface)
 
+find_package(DD4hep)
 find_package(Geant4)
-include(${Geant4_USE_FILE})
-find_package(DD4hep COMPONENTS DDCore DDG4 DDSegmentation DDRec REQUIRED)
 find_package(FCCEDM)
 find_package(PODIO)
 find_package(ROOT)
 find_package(ACTS COMPONENTS Core Examples TGeoPlugin DD4hepPlugin)
+
+set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
+include( DD4hep )
 
 
 gaudi_install_headers(RecTracker)
 gaudi_add_library(TrackingUtils
                  src/lib/*.cpp
                  INCLUDE_DIRS DD4hep HepMC  FWCore  FCCEDM PODIO  DetInterface RecInterface SimG4Interface ROOT
-                 LINK_LIBRARIES GaudiAlgLib FCCEDM PODIO HepMC DD4hep ROOT ${DD4hep_COMPONENT_LIBRARIES}
+                 LINK_LIBRARIES GaudiAlgLib FCCEDM PODIO HepMC DD4hep ROOT 
                  PUBLIC_HEADERS RecTracker) 
 
 gaudi_add_module(RecTracker
                  src/components/*.cpp
-                 INCLUDE_DIRS Geant4 FWCore SimG4Common SimG4Interface DD4hep ROOT RecInterface TrackingUtils ACTS
-                 LINK_LIBRARIES ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep ${DD4hep_COMPONENT_LIBRARIES} TrackingUtils ACTS::ACTSCore ACTS::ACTSDD4hepPlugin)
+                 INCLUDE_DIRS DD4hep Geant4 FWCore SimG4Common SimG4Interface  ROOT RecInterface TrackingUtils ACTS
+                 LINK_LIBRARIES ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep TrackingUtils ACTS::ACTSCore ACTS::ACTSDD4hepPlugin)
 
 
 gaudi_add_library(ActsLogger
