--- a/Reconstruction/RecTracker/CMakeLists.txt
+++ b/Reconstruction/RecTracker/CMakeLists.txt
@@ -7,14 +7,15 @@ gaudi_subdir(RecTracker v1r0)
 gaudi_depends_on_subdirs(GaudiAlg FWCore Sim/SimG4Common Sim/SimG4Interface Detector/DetInterface Reconstruction/RecInterface)
 
 find_package(DD4hep)
+find_package(HepMC)
 find_package(Geant4)
 find_package(FCCEDM)
 find_package(PODIO)
-find_package(ROOT)
-find_package(ACTS COMPONENTS Core Examples TGeoPlugin DD4hepPlugin)
+find_package(ROOT REQUIRED COMPONENTS Geom)
+find_package(ACTS COMPONENTS Core  TGeoPlugin DD4hepPlugin)
 
-set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
-include( DD4hep )
+#set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
+#include( DD4hep )
 
 
 gaudi_install_headers(RecTracker)
@@ -34,7 +35,7 @@ gaudi_add_library(ActsLogger
                  src/lib/ACTSLogger.cpp
                  INCLUDE_DIRS ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface RecInterface ACTS
                  NO_PUBLIC_HEADERS
-                 LINK_LIBRARIES ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep ${DD4hep_COMPONENT_LIBRARIES} ACTS::ACTSCore ACTS::ACTSDD4hepPlugin) 
+                 LINK_LIBRARIES ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep ACTS::ACTSCore ACTS::ACTSDD4hepPlugin) 
 
 include(CTest)
 
