--- a/Test/TestGeometry/CMakeLists.txt
+++ b/Test/TestGeometry/CMakeLists.txt
@@ -12,19 +12,19 @@ find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
 gaudi_install_headers(TestGeometry)
 
-gaudi_add_library(TestGeometry
+gaudi_add_library(TestGeometryLib
 		  src/lib/*.cpp
 		  INCLUDE_DIRS Geant4 ROOT TestGeometry DD4hep
 		  LINK_LIBRARIES GaudiKernel Geant4 ROOT DD4hep
         PUBLIC_HEADERS TestGeometry)
 
-gaudi_add_module(TestGeometryPlugins
+gaudi_add_module(TestGeometry
                  src/components/*.cpp
-                 INCLUDE_DIRS Geant4 FWCore SimG4Interface SimG4Common DetInterface DetCommon TestGeometry
-                 LINK_LIBRARIES GaudiKernel FWCore Geant4 DetCommon TestGeometry)
+                 INCLUDE_DIRS Geant4 FWCore SimG4Interface SimG4Common DetInterface DetCommon TestGeometryLib
+                 LINK_LIBRARIES GaudiKernel FWCore Geant4 DetCommon TestGeometryLib)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
-dd4hep_generate_rootmap(TestGeometry)
+dd4hep_generate_rootmap(TestGeometryLib)
 
 include(CTest)
 gaudi_add_test(GeantOverlapTestFCChhMaster
