--- a/Test/TestGeometry/CMakeLists.txt
+++ b/Test/TestGeometry/CMakeLists.txt
@@ -3,28 +3,18 @@
 ################################################################################
 gaudi_subdir(TestGeometry v1r0)
 
-gaudi_depends_on_subdirs(GaudiKernel FWCore Sim/SimG4Interface Sim/SimG4Common Detector/DetInterface Detector/DetCommon)
+gaudi_depends_on_subdirs(GaudiKernel FWCore Test/TestGeometryLib Sim/SimG4Interface Sim/SimG4Common Detector/DetInterface Detector/DetCommon)
 
 find_package(Geant4)
-include(${Geant4_USE_FILE})
-find_package(DD4hep)
+#include(${Geant4_USE_FILE})
 find_package(ROOT COMPONENTS MathCore GenVector Geom REQUIRED)
 
-gaudi_install_headers(TestGeometry)
-
-gaudi_add_library(TestGeometryLib
-		  src/lib/*.cpp
-		  INCLUDE_DIRS Geant4 ROOT TestGeometry DD4hep
-		  LINK_LIBRARIES GaudiKernel Geant4 ROOT DD4hep
-        PUBLIC_HEADERS TestGeometry)
 
 gaudi_add_module(TestGeometry
                  src/components/*.cpp
                  INCLUDE_DIRS Geant4 FWCore SimG4Interface SimG4Common DetInterface DetCommon TestGeometryLib
                  LINK_LIBRARIES GaudiKernel FWCore Geant4 DetCommon TestGeometryLib)
 
-set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
-dd4hep_generate_rootmap(TestGeometryLib)
 
 include(CTest)
 gaudi_add_test(GeantOverlapTestFCChhMaster
