--- a/Reconstruction/RecFCChhCalorimeter/CMakeLists.txt
+++ b/Reconstruction/RecFCChhCalorimeter/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(Geant4)
 
 gaudi_add_module(RecFCChhCalorimeterPlugins
                  src/components/*.cpp
-                 INCLUDE_DIRS FastJet ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecFCChhCalorimeter
+                 INCLUDE_DIRS FastJet ROOT FWCore HepMC FCCEDM PODIO DD4hep DetInterface DetSegmentation Geant4 DetCommon RecInterface RecCalorimeter RecFCChhCalorimeter
                  LINK_LIBRARIES Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation Geant4 DetCommon ${DD4hep_COMPONENT_LIBRARIES})
 
 include(CTest)
