--- a/Reconstruction/RecFCChhCalorimeter/CMakeLists.txt
+++ b/Reconstruction/RecFCChhCalorimeter/CMakeLists.txt
@@ -4,7 +4,7 @@
 gaudi_subdir(RecFCChhCalorimeter v1r0)
 
 # this declaration will not be needed in the future
-gaudi_depends_on_subdirs(GaudiAlg FWCore Detector/DetInterface Detector/DetSegmentation Detector/DetCommon Reconstruction/RecInterface)
+gaudi_depends_on_subdirs(GaudiAlg FWCore Detector/DetInterface Detector/DetSegmentation Detector/DetCommon Reconstruction/RecInterface Reconstruction/RecCalorimeter)
 
 find_package(FastJet)
 find_package(ROOT COMPONENTS Physics)
@@ -20,6 +20,12 @@ gaudi_add_module(RecFCChhCalorimeterPlugins
                  LINK_LIBRARIES Fastjet ROOT GaudiAlgLib FCCEDM PODIO HepMC DD4hep DetSegmentation Geant4 DetCommon ${DD4hep_COMPONENT_LIBRARIES})
 
 include(CTest)
+
+gaudi_add_test(simulateFullCaloSystemForCellPositions
+	       WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+	       FRAMEWORK ../RecCalorimeter/tests/options/runFullCaloSystem_SimAndDigitisation.py)
+
 gaudi_add_test(reconstructFullCaloSystemCellPositions
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-               FRAMEWORK tests/options/recoPositions_fullCaloSystem.py)
+	       DEPENDS simulateFullCaloSystemForCellPositions
+	       FRAMEWORK tests/options/recoPositions_fullCaloSystem.py)
