--- a/Reconstruction/RecCalorimeter/CMakeLists.txt
+++ b/Reconstruction/RecCalorimeter/CMakeLists.txt
@@ -76,3 +76,7 @@ gaudi_add_test(reconstructionFullCaloSystemWithNoise
                 DEPENDS simulateFullCaloSystem
                 FRAMEWORK tests/options/runFullCaloSystem_ReconstructionSW_noiseFromFile.py
                 PASSREGEX "Segmentation cells  \\(Nphi, Neta, minEta\\): \\[704, 335, 1\\]")
+
+gaudi_add_test(estimatePileup
+                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+                FRAMEWORK tests/options/runPreparePileup.py)
