--- a/Detector/DetStudies/CMakeLists.txt
+++ b/Detector/DetStudies/CMakeLists.txt
@@ -8,7 +8,7 @@ gaudi_depends_on_subdirs(GaudiKernel
                          Detector/DetInterface)
 
 find_package(ROOT COMPONENTS MathCore GenVector Geom Tree)
-find_package(DD4hep COMPONENTS DDSegmentation REQUIRED)
+find_package(DD4hep)
 find_package(FCCEDM)
 find_package(PODIO)
 find_package(CLHEP)
