--- a/Detector/DetFCChhTrackerTkLayout/CMakeLists.txt
+++ b/Detector/DetFCChhTrackerTkLayout/CMakeLists.txt
@@ -7,8 +7,9 @@ gaudi_depends_on_subdirs(GaudiKernel Detector/DetCommon)
 
 
 find_package(DD4hep)
+find_package(Eigen)
 find_package(Geant4)
-find_package(ACTS COMPONENTS Core Examples TGeoPlugin DD4hepPlugin)
+find_package(Acts COMPONENTS Core IdentificationPlugin TGeoPlugin DD4hepPlugin DigitizationPlugin)
 include(${Geant4_USE_FILE})
 
 set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}  ${DD4hep_ROOT}/cmake )
@@ -21,8 +22,8 @@ install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/triplet DESTINATION Detector/DetFCCh
 
 gaudi_add_module(DetFCChhTrackerTkLayout
                  src/*.cpp
-                 INCLUDE_DIRS DD4hep ROOT Geant4 DetCommon  ACTS
-                 LINK_LIBRARIES GaudiKernel DD4hep ROOT Geant4 DetCommon ACTS::ACTSCore ACTS::ACTSDD4hepPlugin)
+                 INCLUDE_DIRS DD4hep ROOT Geant4 DetCommon Eigen  Acts
+                 LINK_LIBRARIES GaudiKernel DD4hep ROOT Geant4 DetCommon ActsCore ActsDD4hepPlugin ActsDigitizationPlugin)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 message(STATUS "LIBRARY_OUTPUT_PATH -> ${LIBRARY_OUTPUT_PATH}")
